// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Charts /> should render properly for "Facet" 1`] = `
<ChartFacet
  chart={
    Object {
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
/>
`;

exports[`<Charts /> should render properly for "Range" 1`] = `
<ChartRange
  chart={
    Object {
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "range",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
/>
`;
